<resources>
    <string name="app_name">COVID-19</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="preference_file_key">com.example.covid_19_tracker.preference_file_key</string>
    <string name="update_interval_key">update_interval_key</string>
    <string name="update_interval_details">Data will be updated periodically within this interval</string>
    <string name="update_interval_title">Data Update Interval</string>
    <string name="one_hour_interval">1 hour</string>
    <string name="two_hours_interval">2 hours</string>
    <string name="five_hours_interval">5 hours</string>
    <string name="one_day_interval">24 hours</string>
    <string name="save_update_interval">Save changes</string>
    <string name="country_new_cases">New Cases</string>
    <string name="country_recovered_cases">Recovered Cases</string>
    <string name="country_active_cases">Active Cases</string>
    <string name="country_death_cases">Death Cases</string>
    <string name="world_today">Today</string>
    <string name="world_today_new_cases">New Cases</string>
    <string name="world_today_deaths">Deaths</string>
    <string name="world_total">Total</string>
    <string name="world_total_cases">Cases</string>
    <string name="world_total_deaths">Deaths</string>
    <string name="world_total_active">Active</string>
    <string name="world_total_critical">Critical</string>
    <string name="world_total_recovered">Recovered</string>
    <string name="world_total_tests">Tests</string>
    <string name="world_note">Number of affected countries is </string>
>>>>>>> f543a4e360103c6c3a385a22c3c645b7091ea740
</resources>
